--- a/Trash_Collector_Project/Views/Home/Index.cshtml
+++ b/Trash_Collector_Project/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
+<div class="glyphicon">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">Let us collect the trash YOUR way</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
