Made Unit nullable and instantiated a ViewModel to send both tables to my View for the Edit method in the CustomerController.

--- a/Trash_Collector_Project/Views/Customer/Index.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Index.cshtml
@@ -7,4 +7,7 @@
 <h2>Welcome, @ViewBag.Name</h2>
 
 <h3>Manage your schedule.</h3>
+<h3>Choose to suspend service</h3>
+
+<h3>View Charges for this Month</h3>
 
