--- a/Trash_Collector_Project/Views/Customer/Create.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Create.cshtml
@@ -137,13 +137,13 @@
         </div>
     </div>
 
-    @*<div class="form-group">
-            @Html.LabelFor(model => model.ExtraPickup, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="form-group">
+            @Html.LabelFor(model => model.Customer.ExtraPickup, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ExtraPickup, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ExtraPickup, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Customer.ExtraPickup, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Customer.ExtraPickup, "", new { @class = "text-danger" })
             </div>
-        </div>*@
+        </div>
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
