--- a/Trash_Collector_Project/Views/Customer/Create.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Create.cshtml
@@ -113,8 +113,8 @@
         </div>
     </div>
 
-    <<div class="form-group">
-    @Html.LabelFor(model => model.Address.State, htmlAttributes: new { @class = "control-label col-md-2" })
+    <div class="form-group">
+        @Html.LabelFor(model => model.Address.State, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownList("State", stateList, "Select State", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Address.State, "", new { @class = "text-danger" })
@@ -138,9 +138,9 @@
     </div>
 
     <div class="form-group">
-            @Html.LabelFor(model => model.Customer.ExtraPickup, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Customer.ExtraPickup, htmlAttributes: new {@class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Customer.ExtraPickup, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Customer.ExtraPickup, new { htmlAttributes = new {@placeholder = "Type Date as 0000-00-00", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Customer.ExtraPickup, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -156,5 +156,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-
