DropDownList works for stateList and pickupDay after fixing dot notation in one of the parameters.

--- a/Trash_Collector_Project/Views/Customer/Create.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Create.cshtml
@@ -116,7 +116,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Address.State, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("State", stateList, "Select State", new { @class = "form-control" })
+            @Html.DropDownList("Address.State", stateList, "Select State", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Address.State, "", new { @class = "text-danger" })
     </div>
     </div>
@@ -132,7 +132,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Customer.PickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("PickupDay", pickupDayList, "Select Pickup", new { @class = "form-control" })
+            @Html.DropDownList("Customer.PickupDay", pickupDayList, "Select Pickup", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Customer.PickupDay, "", new { @class = "text-danger" })
         </div>
     </div>
