--- a/Trash_Collector_Project/Views/Customer/Edit.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Edit.cshtml
@@ -77,6 +77,9 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Customer.ID)
     @Html.HiddenFor(model => model.Address.ID)
+    @Html.HiddenFor(model => model.Address.CustomerId)
+    @Html.HiddenFor(model=> model.Customer.Pickup)
+    @Html.HiddenFor(model=> model.Customer.UserId)
     <div class="form-group">
         @Html.LabelFor(model => model.Customer.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -115,7 +118,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Address.State, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("State", stateList, "Select State", new { @class = "form-control" })
+            @Html.DropDownList("Address.State", stateList, "Select State", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Address.State, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -129,13 +132,13 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Customer.PickupDay, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("PickupDay", pickupDayList, "Select Pickup", new { @class = "form-control" })
+            @Html.DropDownList("Customer.PickupDay", pickupDayList, "Select Pickup", new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Customer.PickupDay, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-default"/>
         </div>
     </div>
 </div>
