--- a/Trash_Collector_Project/Views/Customer/Index.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>Profile</h1>
 <h2>Welcome, @ViewBag.Name</h2>
 
-<h3>Manage your schedule.</h3>
+<h3>@Html.ActionLink("Manage your Profile", "Edit")</h3>
 <h3>Choose to suspend service</h3>
 
 <h3>View Charges for this Month</h3>
