Added Suspend ActionResult for HttpGet. This allows a user to access a page to suspend their pickup service.

--- a/Trash_Collector_Project/Views/Customer/Index.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Index.cshtml
@@ -6,8 +6,8 @@
 <h1>Profile</h1>
 <h2>Welcome, @ViewBag.Name</h2>
 
-<h3>@Html.ActionLink("Manage your Profile", "Edit")</h3>
-<h3>Choose to suspend service</h3>
+<h3>@Html.ActionLink("Manage Your Profile", "Edit")</h3>
+<h3><h3>@Html.ActionLink("Choose To Suspend Your Service", "Suspend")</h3></h3>
 
 <h3>View Charges for this Month</h3>
 
