--- a/Trash_Collector_Project/Views/Customer/Suspend.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Suspend.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StartBreak, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StartBreak, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.StartBreak, new { htmlAttributes = new {@placeholder = "Type Date as 0000-00-00", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StartBreak, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EndBreak, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EndBreak, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.EndBreak, new { htmlAttributes = new { @placeholder = "Type Date as 0000-00-00", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EndBreak, "", new { @class = "text-danger" })
             </div>
         </div>
