Added Details page for future ability to give customers the details on how much they owe. Added an EmployeeController for managing Employee views.

--- a/Trash_Collector_Project/Views/Customer/Index.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Index.cshtml
@@ -7,7 +7,6 @@
 <h2>Welcome, @ViewBag.Name</h2>
 
 <h3>@Html.ActionLink("Manage Your Profile", "Edit")</h3>
-<h3><h3>@Html.ActionLink("Choose To Suspend Your Service", "Suspend")</h3></h3>
-
-<h3>View Charges for this Month</h3>
+<h3>@Html.ActionLink("Choose To Suspend Your Service", "Suspend")</h3>
+<h3>@Html.ActionLink("View Charges For This Month", "Details")</h3>
 
