--- a/Trash_Collector_Project/Views/Employee/Index.cshtml
+++ b/Trash_Collector_Project/Views/Employee/Index.cshtml
@@ -9,79 +9,44 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    <p>
+        Find by Day of Pickup: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.NameSortParm })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PickupDay)
+            @Html.ActionLink("PickUpDay", "Index", new { sortOrder = ViewBag.DateSortParm })
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pickup)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartBreak)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndBreak)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Paid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ExtraPickup)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PickupTotalFromMonth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PickupDay)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Pickup)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartBreak)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndBreak)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Paid)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ExtraPickup)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PickupTotalFromMonth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PickupDay)
+            </td>
+            <td>
+                @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+            </td>
+        </tr>
+    }
 
 </table>
