--- a/Trash_Collector_Project/Views/Employee/Index.cshtml
+++ b/Trash_Collector_Project/Views/Employee/Index.cshtml
@@ -4,11 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Assigned Customers</h2>
 @using (Html.BeginForm())
 {
     <p>
@@ -19,13 +15,13 @@
 <table class="table">
     <tr>
         <th>
+            @Html.ActionLink("Day of Pickup", "Index", new { sortOrder = ViewBag.DateSortParm })
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
         <th>
             @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.NameSortParm })
-        </th>
-        <th>
-            @Html.ActionLink("PickUpDay", "Index", new { sortOrder = ViewBag.DateSortParm })
         </th>
     </tr>
 
@@ -33,18 +29,16 @@
     {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.PickupDay)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PickupDay)
-            </td>
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                @Html.ActionLink("Resolve Pickup", "Details", new { id = item.ID })
             </td>
         </tr>
     }
