--- a/Trash_Collector_Project/Views/Employee/Index.cshtml
+++ b/Trash_Collector_Project/Views/Employee/Index.cshtml
@@ -38,7 +38,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.ActionLink("Resolve Pickup", "Details", new { id = item.ID })
+                @Html.ActionLink("Review Pickup", "Details", new { id = item.ID })
             </td>
         </tr>
     }
