--- a/Trash_Collector_Project/Views/Customer/Details.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Details.cshtml
@@ -12,11 +12,11 @@
     <dl class="dl-horizontal">
 
         <dt>
-            @Html.DisplayNameFor(model => model.PickupTotalFromMonth)
+            Balance
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PickupTotalFromMonth)
+            @Html.ViewBag.amount
         </dd>
 
     </dl>
