Added functionality to pass the logged in user's role into the RedirectToAction parameters as a string so that the user who logs in will be sent to the appropriate landing page.

--- a/Trash_Collector_Project/Views/Customer/Details.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Details.cshtml
@@ -22,6 +22,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Pay (Not Available at This Time) (Please Mail Checks)", null, new { id = Model.ID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
