--- a/Trash_Collector_Project/Views/Customer/Details.cshtml
+++ b/Trash_Collector_Project/Views/Customer/Details.cshtml
@@ -12,7 +12,7 @@
     <dl class="dl-horizontal">
 
         <dt>
-            Balance
+            Current Charges Posted
         </dt>
 
         <dd>
